zien24_implementation/org/objects/Orderprognose__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orderprognoses</relationshipLabel>
        <relationshipName>Orderprognoses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Januari__c</fullName>
        <label>Actuals Januari</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_April__c</fullName>
        <label>Actuals April</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_Augustus__c</fullName>
        <label>Actuals Augustus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_December__c</fullName>
        <label>Actuals December</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_Februari__c</fullName>
        <label>Actuals Februari</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_Juli__c</fullName>
        <label>Actuals Juli</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_Juni__c</fullName>
        <label>Actuals Juni</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_Maart__c</fullName>
        <label>Actuals Maart</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_Mei__c</fullName>
        <label>Actuals Mei</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_November__c</fullName>
        <label>Actuals November</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_Oktober__c</fullName>
        <label>Actuals Oktober</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_September__c</fullName>
        <label>Actuals September</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maand__c</fullName>
        <label>Maand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Januari</fullName>
                </value>
                <value>
                    <fullName>Februari</fullName>
                </value>
                <value>
                    <fullName>Maart</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>Mei</fullName>
                </value>
                <value>
                    <fullName>Juni</fullName>
                </value>
                <value>
                    <fullName>Juli</fullName>
                </value>
                <value>
                    <fullName>Augustus</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>Oktober</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orders_Jaarlijks__c</fullName>
        <label>Orders Jaarlijks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Maand__c</fullName>
        <label>Orders/Maand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_April__c</fullName>
        <formula>Prognose_Instelling__r.April__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose April</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_Augustus__c</fullName>
        <formula>Prognose_Instelling__r.Augustus__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose Augustus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_December__c</fullName>
        <formula>Prognose_Instelling__r.December__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose December</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_Februari__c</fullName>
        <formula>Orders_Jaarlijks__c * Prognose_Instelling__r.Februari__c</formula>
        <label>Prognose Februari</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_Instelling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prognose Instelling</label>
        <referenceTo>Prognose_Instelling__c</referenceTo>
        <relationshipLabel>Orderprognoses</relationshipLabel>
        <relationshipName>Orderprognoses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prognose_Januari__c</fullName>
        <formula>Orders_Jaarlijks__c * Prognose_Instelling__r.Januari__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose Januari</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_Juli__c</fullName>
        <formula>Prognose_Instelling__r.Juli__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose Juli</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_Juni__c</fullName>
        <formula>Prognose_Instelling__r.Juni__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose Juni</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_Maart__c</fullName>
        <formula>Prognose_Instelling__r.Maart__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose Maart</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_Mei__c</fullName>
        <formula>Prognose_Instelling__r.Mei__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose Mei</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_November__c</fullName>
        <formula>Prognose_Instelling__r.November__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose November</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_Oktober__c</fullName>
        <formula>Prognose_Instelling__r.Oktober__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose Oktober</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prognose_September__c</fullName>
        <formula>Prognose_Instelling__r.September__c * Orders_Jaarlijks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prognose September</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Orderprognose</label>
    <nameField>
        <label>Orderprognose</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orderprognoses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>